<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">About</string>
    <string name="Intro">Nanodegree Apps</string>
    <string name="Btn1">Popular Movies</string>
    <string name="Btn2">Stock Hawk</string>
    <string name="Btn3">Build It Bigger</string>
    <string name="Btn4">Make Your App Material</string>
    <string name="Btn5">Go Ubiquitous</string>
    <string name="Btn6">Capstone: My Own App</string>
</resources>
