<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:showIn="@layout/activity_main"
    tools:context=".MainActivityFragment"
    android:background="#212121">


    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Intro"
        android:id="@+id/textView"
        android:textSize="26dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textColor="#888888" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Btn1"
        android:id="@+id/button"
        android:onClick="onButtonClick"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        style="Button"
        android:padding="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:layout_marginBottom="2dp"
        android:background="@color/btnOrange" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Btn2"
        android:id="@+id/button2"

        android:layout_marginBottom="2dp"
        android:onClick="onButtonClick"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3"
        style="Button"
        android:padding="5dp"
        android:background="@color/btnOrange" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Btn3"
        android:id="@+id/button3"

        android:layout_marginBottom="2dp"
        android:onClick="onButtonClick"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:layout_alignRight="@+id/button4"
        android:layout_alignEnd="@+id/button4"
        style="Button"
        android:padding="5dp"
        android:background="@color/btnOrange" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Btn4"
        android:id="@+id/button4"

        android:layout_marginBottom="2dp"
        android:onClick="onButtonClick"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:layout_alignRight="@+id/button5"
        android:layout_alignEnd="@+id/button5"
        style="Button"
        android:padding="5dp"
        android:background="@color/btnOrange" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Btn5"
        android:id="@+id/button5"

        android:layout_marginBottom="2dp"
        android:onClick="onButtonClick"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:layout_alignRight="@+id/button6"
        android:layout_alignEnd="@+id/button6"
        style="Button"
        android:padding="5dp"
        android:background="@color/btnOrange" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Btn6"

        android:layout_marginBottom="2dp"
        android:onClick="onButtonClick"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        style="Button"
        android:padding="5dp"
        android:background="@color/btnRed" />
</RelativeLayout>